--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
     <title>Jim's Page</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-</body>
+    <div class="preamble">
+    <h1>Hello World</h1> <br>
+    <p>This is just a load of text to fill some space so there may or may not be any reason to keep reading along. <br>
+       You kept going, that's nice of you. As a reward here is a joke...What did the elephant say to the naked tribesman? <br>
+       How do you breathe through that thing? <br>
+       To fill more space here comes a list of places I like in an order; It could be preference, it could be nothing, and music artists in no particular order <br>
+    </p>
+    </div>
+    <div class="places">
+        <h2>Some places:</h2>
+        <ol>
+            <li>San Luis Obispo, CA</li>
+            <li>Split, Croatia</li>
+            <li>Lake Tahoe, CA</li>
+            <li>Oakland, CA</li>
+            <li>Pilsen, Czech Republic</li>
+            <li>The Bhurtpore Inn, England</li>
+            <li>Vienna, Austria</li>
+            <li>Kotor, Montenegro</li>
+            <li>Mostar, Bosnia and Herzegovina</li>
+        </ol>
+    </div>
+    <div class="musiclist">
+        <h2>Some music artists:</h2>
+        <ul>
+            <li>Radiohead</li>
+            <li>Interpol</li>
+            <li>TV On The Radio</li>
+            <li>Tyler, The Creator</li>
+            <li>Aphex Twin</li>
+            <li>Bon Iver</li>
+        </ul>
+    </div>
+
+    </body>
 </html>
