--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <li>Bon Iver</li>
         </ul>
     </div>
-
+    <div> 
+        <button class="button" type="button">Style Me Different</button>
+    </div>
     </body>
 </html>
